manifests/base/vaultwarden/vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        runAsUser: 10001
        runAsGroup: 20001
        fsGroup: 20001
      volumes:
        - name: data
          hostPath:
            path: /home/adzik/docker/vw-data
            type: Directory

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden-http
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: vaultwarden
  type: ClusterIP
